# Forum-Project

./: Admin.cpp  Admin.h  CMakeLists.txt  ChannelAdmin.cpp  ChannelAdmin.h  LICENSE  LoginDialog.qml  LoginManager.cpp  LoginManager.h  Main.qml  NewPostDialog.qml  NormalUser.cpp  NormalUser.h  PostDetails.qml  PostModel.cpp  PostModel.h  Prompt.qml  PromptDialog.qml  README.md  User.cpp  User.h  UserDetail.qml  UserFactory.h  UserManager.cpp  UserManager.h  httpmanager.cpp  httpmanager.h  main.cpp  qml.qrc  tst_user.cpp
